ChangeLog

20033008
	-src/transform.c
	
	Removed unintentional debug from CVS
	
	Liam Girdwood
	
	-src/libnova.c
	
	Added #define VERSION for building on Windows
	
	Pablo Martikian

20032508
	-src/*.c *.h
	
	Corrected GNU licence to use LGPL 
	
	Liam Girdwood

20032403
	-src/julian_day.c
	
	Fixed local to UT transformations
	
	Liam Girdwood

20032003
	-src/misc.c
	
	Mac OSX does not have malloc.h as it's included in stdlib.h

	Paul Ray

	-examples/asteroid.c
	-examples/Makefile.am
	
	added asteroid example code based on MPCORB data for Pallas.

	-src/elliptic motion.c
	
	removed an unintentional change.

	-src/libnova.h
	-src/elliptic_motion.c
	
	added get_ell_last_perihelion()
	
	Liam Girdwood
	
20031808
	-src/libnova.h
	-src/julian_day.c
	
	Added MPC date format to ln_date conversion.
	
	Liam Girdwood

20031708
	-src/rise_set.c
	-src/julian_day.c
	-src/transform.c
	
	Fixed doxygen warnings

	-lntest/lntest.c
	Updated test's to use dynamical time diff in nutation.
	
	-src/Makefile.am
	-src/libnova.h
	-src/angular_separation.c
	-lntest/test.c
	
	Added angular separation and position angle functions.
	
	Liam Girdwood

20031508
	-src/lunar.*
	
	Removed build warnings
	
	Liam Girdwood

20031308
	-src/julian_day.c
	
	Fixed divide by hours bug in get_julian_local_date()
	to divide by seconds
	
	Pablo Martikian, Liam Girdwood

	-src/mercury.c
	-src/venus.c
	-src/earth.c
	-src/mars.c
	-src/jupiter.c
	-src/saturn.c
	-src/uranus.c
	-src/neptune.c
	-src/pluto.c
	-src/elliptic_motion.c
	-src/parabolic_motion.c
	-src/solar.c
	
	Removed unused variable JD in get_rect_from_helio()
	
	Pablo Martikian, Liam Girdwood

	-src/misc.c
	Fixed uninitialised variable in interpolate5
	
	Pablo Martikian, Liam Girdwood

	-src/nutation.c
	Removed build warnings.
	Uses JD + delta T Chap 22, equ 22.1
	
	Liam Girdwood, Pablo Martikian

20031208
	-src/aberration.*
	-src/misc.c
	Removed build warnings
	
	Pablo Martikian, Liam Girdwood

	-src/libnova.h
	Add extra M_PI_* #defines for windows
	